kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-app
  namespace: livia
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: app
  sessionAffinity: None
  type: ClusterIP
